python-web-server/tests/http/requests/invalid/prefix_06.py
from web_server.config import MessageConfig
from web_server.errors import InvalidHTTPVersion

cfg = MessageConfig.default()
request = InvalidHTTPVersion
